--- a/view/index.html
+++ b/view/index.html
@@ -1605,28 +1605,35 @@
             </tr>
     
         <tr>
-            <td class="icon-cell" style=" color: white; "><svg
-    xmlns="http://www.w3.org/2000/svg"
-    xmlns:xlink="http://www.w3.org/1999/xlink"
-    aria-hidden="true"
-    role="img"
-    width="1em"
-    height="1em"
-    preserveAspectRatio="xMidYMid meet"
-    viewBox="0 0 24 24"
-    class="w-14 h-14 "
-  >
-    <rect x="0" y="0" width="24" height="24" />
-    <path d="M12 16l4-5h-3V4h-2v7H8z" fill="currentColor" />
-    <path
-      d="M20 18H4v-7H2v7c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2v-7h-2v7z"
-      fill="currentColor"
-    />
-  </svg></td>
-            <td>DownLoadIcon</td>
-            <td><button onclick="copyToClipboard(&apos;import {DownLoadIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
-            <td><button onclick="copyToClipboard(&apos;DownLoadIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/DownLoadIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
-            <td><button onclick="copySvgToClipboard('%3Csvg%0A%20%20%20%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%0A%20%20%20%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%0A%20%20%20%20aria-hidden%3D%22true%22%0A%20%20%20%20role%3D%22img%22%0A%20%20%20%20width%3D%221em%22%0A%20%20%20%20height%3D%221em%22%0A%20%20%20%20preserveAspectRatio%3D%22xMidYMid%20meet%22%0A%20%20%20%20viewBox%3D%220%200%2024%2024%22%0A%20%20%20%20class%3D%22w-14%20h-14%20%22%0A%20%20%3E%0A%20%20%20%20%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%2224%22%20height%3D%2224%22%20%2F%3E%0A%20%20%20%20%3Cpath%20d%3D%22M12%2016l4-5h-3V4h-2v7H8z%22%20fill%3D%22currentColor%22%20%2F%3E%0A%20%20%20%20%3Cpath%0A%20%20%20%20%20%20d%3D%22M20%2018H4v-7H2v7c0%201.103.897%202%202%202h16c1.103%200%202-.897%202-2v-7h-2v7z%22%0A%20%20%20%20%20%20fill%3D%22currentColor%22%0A%20%20%20%20%2F%3E%0A%20%20%3C%2Fsvg%3E')">Copy SVG</button></td>
+            <td class="icon-cell" style=" color: white; "><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="currentColor" d="M6.5 20q-2.275 0-3.887-1.575T1 14.575q0-1.95 1.175-3.475T5.25 9.15q.575-2.025 2.138-3.4T11 4.075v8.075L9.4 10.6L8 12l4 4l4-4l-1.4-1.4l-1.6 1.55V4.075q2.575.35 4.288 2.313T19 11q1.725.2 2.863 1.488T23 15.5q0 1.875-1.312 3.188T18.5 20z"/></svg></td>
+            <td>DownloadCloudFilledIcon</td>
+            <td><button onclick="copyToClipboard(&apos;import {DownloadCloudFilledIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
+            <td><button onclick="copyToClipboard(&apos;DownloadCloudFilledIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/DownloadCloudFilledIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
+            <td><button onclick="copySvgToClipboard('%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2024%2024%22%3E%3Crect%20width%3D%2224%22%20height%3D%2224%22%20fill%3D%22none%22%2F%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M6.5%2020q-2.275%200-3.887-1.575T1%2014.575q0-1.95%201.175-3.475T5.25%209.15q.575-2.025%202.138-3.4T11%204.075v8.075L9.4%2010.6L8%2012l4%204l4-4l-1.4-1.4l-1.6%201.55V4.075q2.575.35%204.288%202.313T19%2011q1.725.2%202.863%201.488T23%2015.5q0%201.875-1.312%203.188T18.5%2020z%22%2F%3E%3C%2Fsvg%3E')">Copy SVG</button></td>
+            </tr>
+    
+        <tr>
+            <td class="icon-cell" style=" color: white; "><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="currentColor" d="M6.5 20q-2.275 0-3.887-1.575T1 14.575q0-1.95 1.175-3.475T5.25 9.15q.425-1.8 2.125-3.425T11 4.1q.825 0 1.413.588T13 6.1v6.05l1.6-1.55L16 12l-4 4l-4-4l1.4-1.4l1.6 1.55V6.1q-1.9.35-2.95 1.838T7 11h-.5q-1.45 0-2.475 1.025T3 14.5t1.025 2.475T6.5 18h12q1.05 0 1.775-.725T21 15.5t-.725-1.775T18.5 13H17v-2q0-1.2-.55-2.238T15 7V4.675q1.85.875 2.925 2.588T19 11q1.725.2 2.863 1.488T23 15.5q0 1.875-1.312 3.188T18.5 20zm5.5-8.95"/></svg></td>
+            <td>DownloadCloudOutlineIcon</td>
+            <td><button onclick="copyToClipboard(&apos;import {DownloadCloudOutlineIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
+            <td><button onclick="copyToClipboard(&apos;DownloadCloudOutlineIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/DownloadCloudOutlineIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
+            <td><button onclick="copySvgToClipboard('%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2024%2024%22%3E%3Crect%20width%3D%2224%22%20height%3D%2224%22%20fill%3D%22none%22%2F%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M6.5%2020q-2.275%200-3.887-1.575T1%2014.575q0-1.95%201.175-3.475T5.25%209.15q.425-1.8%202.125-3.425T11%204.1q.825%200%201.413.588T13%206.1v6.05l1.6-1.55L16%2012l-4%204l-4-4l1.4-1.4l1.6%201.55V6.1q-1.9.35-2.95%201.838T7%2011h-.5q-1.45%200-2.475%201.025T3%2014.5t1.025%202.475T6.5%2018h12q1.05%200%201.775-.725T21%2015.5t-.725-1.775T18.5%2013H17v-2q0-1.2-.55-2.238T15%207V4.675q1.85.875%202.925%202.588T19%2011q1.725.2%202.863%201.488T23%2015.5q0%201.875-1.312%203.188T18.5%2020zm5.5-8.95%22%2F%3E%3C%2Fsvg%3E')">Copy SVG</button></td>
+            </tr>
+    
+        <tr>
+            <td class="icon-cell" style=" color: white; "><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="currentColor" d="m12 16l-5-5l1.4-1.45l2.6 2.6V4h2v8.15l2.6-2.6L17 11zm-6 4q-.825 0-1.412-.587T4 18v-3h2v3h12v-3h2v3q0 .825-.587 1.413T18 20z"/></svg></td>
+            <td>DownloadIcon</td>
+            <td><button onclick="copyToClipboard(&apos;import {DownloadIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
+            <td><button onclick="copyToClipboard(&apos;DownloadIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/DownloadIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
+            <td><button onclick="copySvgToClipboard('%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2024%2024%22%3E%3Crect%20width%3D%2224%22%20height%3D%2224%22%20fill%3D%22none%22%2F%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22m12%2016l-5-5l1.4-1.45l2.6%202.6V4h2v8.15l2.6-2.6L17%2011zm-6%204q-.825%200-1.412-.587T4%2018v-3h2v3h12v-3h2v3q0%20.825-.587%201.413T18%2020z%22%2F%3E%3C%2Fsvg%3E')">Copy SVG</button></td>
+            </tr>
+    
+        <tr>
+            <td class="icon-cell" style=" color: white; "><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="currentColor" d="m12 15.577l-3.539-3.538l.708-.72L11.5 13.65V5h1v8.65l2.33-2.33l.709.719zM6.616 19q-.691 0-1.153-.462T5 17.384v-2.423h1v2.423q0 .231.192.424t.423.192h10.77q.23 0 .423-.192t.192-.424v-2.423h1v2.423q0 .691-.462 1.153T17.384 19z"/></svg></td>
+            <td>DownloadLightIcon</td>
+            <td><button onclick="copyToClipboard(&apos;import {DownloadLightIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
+            <td><button onclick="copyToClipboard(&apos;DownloadLightIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/DownloadLightIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
+            <td><button onclick="copySvgToClipboard('%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2024%2024%22%3E%3Crect%20width%3D%2224%22%20height%3D%2224%22%20fill%3D%22none%22%2F%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22m12%2015.577l-3.539-3.538l.708-.72L11.5%2013.65V5h1v8.65l2.33-2.33l.709.719zM6.616%2019q-.691%200-1.153-.462T5%2017.384v-2.423h1v2.423q0%20.231.192.424t.423.192h10.77q.23%200%20.423-.192t.192-.424v-2.423h1v2.423q0%20.691-.462%201.153T17.384%2019z%22%2F%3E%3C%2Fsvg%3E')">Copy SVG</button></td>
             </tr>
     
         <tr>
@@ -4307,39 +4314,18 @@ clip-rule="evenodd"
       d="M544 864V672h128L512 480L352 672h128v192H320v-1.6c-5.376.32-10.496 1.6-16 1.6A240 240 0 0 1 64 624c0-123.136 93.12-223.488 212.608-237.248A239.808 239.808 0 0 1 512 192a239.872 239.872 0 0 1 235.456 194.752c119.488 13.76 212.48 114.112 212.48 237.248a240 240 0 0 1-240 240c-5.376 0-10.56-1.28-16-1.6v1.6H544z"
     />
   </svg></td>
-            <td>UploadFilledIcon</td>
-            <td><button onclick="copyToClipboard(&apos;import {UploadFilledIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
-            <td><button onclick="copyToClipboard(&apos;UploadFilledIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/UploadFilledIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
+            <td>UploadCloudIcon</td>
+            <td><button onclick="copyToClipboard(&apos;import {UploadCloudIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
+            <td><button onclick="copyToClipboard(&apos;UploadCloudIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/UploadCloudIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
             <td><button onclick="copySvgToClipboard('%3Csvg%0A%20%20%20%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%0A%20%20%20%20width%3D%221em%22%0A%20%20%20%20height%3D%221em%22%0A%20%20%20%20preserveAspectRatio%3D%22xMidYMid%20meet%22%0A%20%20%20%20viewBox%3D%220%200%201024%201024%22%0A%20%20%3E%0A%20%20%20%20%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%221024%22%20height%3D%221024%22%20fill%3D%22none%22%20stroke%3D%22none%22%20%2F%3E%0A%20%20%20%20%3Cpath%0A%20%20%20%20%20%20fill%3D%22currentColor%22%0A%20%20%20%20%20%20d%3D%22M544%20864V672h128L512%20480L352%20672h128v192H320v-1.6c-5.376.32-10.496%201.6-16%201.6A240%20240%200%200%201%2064%20624c0-123.136%2093.12-223.488%20212.608-237.248A239.808%20239.808%200%200%201%20512%20192a239.872%20239.872%200%200%201%20235.456%20194.752c119.488%2013.76%20212.48%20114.112%20212.48%20237.248a240%20240%200%200%201-240%20240c-5.376%200-10.56-1.28-16-1.6v1.6H544z%22%0A%20%20%20%20%2F%3E%0A%20%20%3C%2Fsvg%3E')">Copy SVG</button></td>
             </tr>
     
         <tr>
-            <td class="icon-cell" style=" color: white; "><svg
-    xmlns="http://www.w3.org/2000/svg"
-    aria-hidden="true"
-    role="img"
-    width="1em"
-    height="1em"
-    preserveAspectRatio="xMidYMid meet"
-    viewBox="0 0 21 21"
-  >
-    <rect x="0" y="0" width="21" height="21" fill="none" stroke="none" />
-    <g
-      fill="none"
-      fill-rule="evenodd"
-      stroke="currentColor"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path d="M6.5 7.753l4-4.232l4 4.191" />
-      <path d="M10.5 3.5v11" />
-      <path d="M4.5 17.5h12" />
-    </g>
-  </svg></td>
+            <td class="icon-cell" style=" color: white; "><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><rect width="24" height="24" fill="none"/><path fill="currentColor" d="M11 16V7.85l-2.6 2.6L7 9l5-5l5 5l-1.4 1.45l-2.6-2.6V16zm-5 4q-.825 0-1.412-.587T4 18v-3h2v3h12v-3h2v3q0 .825-.587 1.413T18 20z"/></svg></td>
             <td>UploadIcon</td>
             <td><button onclick="copyToClipboard(&apos;import {UploadIcon} from &amp;apos;@datadayrepos/icons&amp;apos;&apos;)">Import Statement</button></td>
             <td><button onclick="copyToClipboard(&apos;UploadIcon: defineAsyncComponent(() =&gt; import(&amp;apos;@datadayrepos/icons/UploadIcon&amp;apos;))&apos;)">Dynamic Import</button></td>
-            <td><button onclick="copySvgToClipboard('%3Csvg%0A%20%20%20%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%0A%20%20%20%20aria-hidden%3D%22true%22%0A%20%20%20%20role%3D%22img%22%0A%20%20%20%20width%3D%221em%22%0A%20%20%20%20height%3D%221em%22%0A%20%20%20%20preserveAspectRatio%3D%22xMidYMid%20meet%22%0A%20%20%20%20viewBox%3D%220%200%2021%2021%22%0A%20%20%3E%0A%20%20%20%20%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%2221%22%20height%3D%2221%22%20fill%3D%22none%22%20stroke%3D%22none%22%20%2F%3E%0A%20%20%20%20%3Cg%0A%20%20%20%20%20%20fill%3D%22none%22%0A%20%20%20%20%20%20fill-rule%3D%22evenodd%22%0A%20%20%20%20%20%20stroke%3D%22currentColor%22%0A%20%20%20%20%20%20stroke-linecap%3D%22round%22%0A%20%20%20%20%20%20stroke-linejoin%3D%22round%22%0A%20%20%20%20%3E%0A%20%20%20%20%20%20%3Cpath%20d%3D%22M6.5%207.753l4-4.232l4%204.191%22%20%2F%3E%0A%20%20%20%20%20%20%3Cpath%20d%3D%22M10.5%203.5v11%22%20%2F%3E%0A%20%20%20%20%20%20%3Cpath%20d%3D%22M4.5%2017.5h12%22%20%2F%3E%0A%20%20%20%20%3C%2Fg%3E%0A%20%20%3C%2Fsvg%3E')">Copy SVG</button></td>
+            <td><button onclick="copySvgToClipboard('%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%221em%22%20height%3D%221em%22%20viewBox%3D%220%200%2024%2024%22%3E%3Crect%20width%3D%2224%22%20height%3D%2224%22%20fill%3D%22none%22%2F%3E%3Cpath%20fill%3D%22currentColor%22%20d%3D%22M11%2016V7.85l-2.6%202.6L7%209l5-5l5%205l-1.4%201.45l-2.6-2.6V16zm-5%204q-.825%200-1.412-.587T4%2018v-3h2v3h12v-3h2v3q0%20.825-.587%201.413T18%2020z%22%2F%3E%3C%2Fsvg%3E')">Copy SVG</button></td>
             </tr>
     
         <tr>
